--- a/krista_mobile_mobule/pubspec.yaml
+++ b/krista_mobile_mobule/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
