--- a/krista_mobile_mobule/pubspec.yaml
+++ b/krista_mobile_mobule/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   intl: any
   internet_connection_checker: ^1.0.0+1
+  flutter_svg: ^2.0.7
 
   photo_manager: ^2.7.1
 
@@ -64,9 +65,9 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/krista_icon.png
+    - assets/images/krista_icon.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -79,11 +80,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+        - asset: assets/fonts/Montserrat-Bold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
