--- a/krista_mobile_mobule/pubspec.yaml
+++ b/krista_mobile_mobule/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_svg: ^2.0.7
 
   photo_manager: ^2.7.1
+  lottie: ^2.6.0
+  photo_view: ^0.14.0
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +71,10 @@ flutter:
   assets:
     - assets/images/krista_icon.png
     - assets/images/krista_icon.svg
+    - assets/images/vector_back.svg
+    - assets/images/vector_forward.svg
 
+    - assets/animations/logo_animation.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
