--- a/krista_mobile_mobule/pubspec.yaml
+++ b/krista_mobile_mobule/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   lottie: ^2.6.0
   photo_view: ^0.14.0
   blur: ^3.1.0
+  gallery_saver: ^2.3.2
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
