--- a/krista_mobile_mobule/android/app/src/main/AndroidManifest.xml
+++ b/krista_mobile_mobule/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application    
         android:label="Krista"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/main_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
